--- a/css/style.css
+++ b/css/style.css
@@ -75,4 +75,16 @@
     position: relative;
   }
   
-  
+  /* Header styles */
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 1rem;
+  text-align: left; 
+  top: 0; 
+  left: 0; 
+}
+
+header h1 {
+  font-size: 1.5rem;
+}
